[gd_scene load_steps=5 format=2]

[ext_resource path="res://lobby/lobby.gd" type="Script" id=1]
[ext_resource path="res://lobby/playerpanel.gd" type="Script" id=2]
[ext_resource path="res://lobby/lobbypanel.gd" type="Script" id=3]
[ext_resource path="res://lobby/matchmakingpanel.gd" type="Script" id=4]

[node name="Lobby" type="Control"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -320.0
margin_top = -200.0
margin_right = 320.0
margin_bottom = 200.0
size_flags_horizontal = 2
size_flags_vertical = 2
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}
online = true

[node name="LobbyPanel" type="Panel" parent="."]
margin_left = 8.0
margin_top = 8.0
margin_right = 232.0
margin_bottom = 118.0
size_flags_horizontal = 2
size_flags_vertical = 2
script = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AddressLabel" type="Label" parent="LobbyPanel"]
margin_left = 16.0
margin_top = 8.0
margin_right = 68.0
margin_bottom = 22.0
size_flags_horizontal = 2
size_flags_vertical = 0
text = "Address of server (if joining)"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Address" type="LineEdit" parent="LobbyPanel"]
margin_left = 8.0
margin_top = 30.0
margin_right = 216.0
margin_bottom = 54.0
size_flags_horizontal = 2
size_flags_vertical = 2
text = "127.0.0.1"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HostButton" type="Button" parent="LobbyPanel"]
margin_left = 8.0
margin_top = 60.0
margin_right = 88.0
margin_bottom = 80.0
size_flags_horizontal = 2
size_flags_vertical = 2
text = "Host"

[node name="JoinButton" type="Button" parent="LobbyPanel"]
margin_left = 136.0
margin_top = 60.0
margin_right = 216.0
margin_bottom = 80.0
size_flags_horizontal = 2
size_flags_vertical = 2
text = "Join"

[node name="StatusOk" type="Label" parent="LobbyPanel"]
margin_left = 10.0
margin_top = 90.0
margin_right = 210.0
margin_bottom = 104.0
size_flags_horizontal = 2
size_flags_vertical = 0
custom_colors/font_color = Color( 0, 1, 0.015625, 1 )
align = 1

[node name="StatusFail" type="Label" parent="LobbyPanel"]
margin_left = 10.0
margin_top = 90.0
margin_right = 210.0
margin_bottom = 104.0
size_flags_horizontal = 2
size_flags_vertical = 0
custom_colors/font_color = Color( 1, 0, 0, 1 )
align = 1

[node name="MatchMakingPanel" type="Panel" parent="."]
margin_left = 8.0
margin_top = 124.0
margin_right = 232.0
margin_bottom = 234.0
size_flags_horizontal = 2
size_flags_vertical = 2
script = ExtResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MatchmakingLabel" type="Label" parent="MatchMakingPanel"]
margin_left = 16.0
margin_top = 8.0
margin_right = 68.0
margin_bottom = 22.0
size_flags_horizontal = 2
size_flags_vertical = 0
text = "Find a match"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="FindButton" type="Button" parent="MatchMakingPanel"]
margin_left = 8.0
margin_top = 64.0
margin_right = 88.0
margin_bottom = 84.0
size_flags_horizontal = 2
size_flags_vertical = 2
text = "Go"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CancelButton" type="Button" parent="MatchMakingPanel"]
margin_left = 136.0
margin_top = 64.0
margin_right = 216.0
margin_bottom = 84.0
size_flags_horizontal = 2
size_flags_vertical = 2
text = "Go"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="StatusOk" type="Label" parent="MatchMakingPanel"]
margin_left = 10.0
margin_top = 90.0
margin_right = 210.0
margin_bottom = 104.0
size_flags_horizontal = 2
size_flags_vertical = 0
custom_colors/font_color = Color( 0, 1, 0.015625, 1 )
align = 1

[node name="StatusFail" type="Label" parent="MatchMakingPanel"]
margin_left = 10.0
margin_top = 90.0
margin_right = 210.0
margin_bottom = 104.0
size_flags_horizontal = 2
size_flags_vertical = 0
custom_colors/font_color = Color( 1, 0, 0, 1 )
align = 1

[node name="PlayerPanel" type="Panel" parent="."]
margin_left = 408.0
margin_top = 8.0
margin_right = 632.0
margin_bottom = 96.0
size_flags_horizontal = 2
size_flags_vertical = 2
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TitleLabel" type="Label" parent="PlayerPanel"]
margin_left = 56.0
margin_top = 8.0
margin_right = 173.0
margin_bottom = 22.0
size_flags_horizontal = 2
size_flags_vertical = 0
text = "Players connected"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PlayerLabel1" type="Label" parent="PlayerPanel"]
margin_left = 10.0
margin_top = 32.0
margin_right = 216.0
margin_bottom = 48.0
text = "You"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PlayerLabel2" type="Label" parent="PlayerPanel"]
margin_left = 10.0
margin_top = 64.0
margin_right = 216.0
margin_bottom = 80.0
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="pressed" from="LobbyPanel/HostButton" to="LobbyPanel" method="_on_host_pressed"]
[connection signal="pressed" from="LobbyPanel/JoinButton" to="LobbyPanel" method="_on_join_pressed"]
[connection signal="pressed" from="MatchMakingPanel/FindButton" to="MatchMakingPanel" method="_on_FindButton_pressed"]
[connection signal="pressed" from="MatchMakingPanel/CancelButton" to="MatchMakingPanel" method="_on_CancelButton_pressed"]
